fix wrapping collab names in footer

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -67,10 +67,6 @@
       text-underline-position: from-font;
     }
   }
-  .footer__collab,
-  .footer__legal-pages {
-    width: 9rem;
-  }
 
   .footer__name,
   .footer__legal-pages {
